<resources>
    <string name="app_name">AppCitas</string>

    <!-- Login strings -->
    <string name="mainActivity">Appointments</string>
    <string name="btn_login">LOG IN</string>
    <string name="tv_sign_up">¿No eres usuario? ¡Regístrate!</string>
    <string name="tv_remember_me">Recuérdame</string>
    <string name="error_message_no_registered">Usuario no registrado</string>

    <!-- Sign up strings -->
    <string name="tv_goto_login">¿Ya eres usuario?. Inicia sesión</string>
    <string name="ht_user_name">Nombre</string>
    <string name="ht_user_surname">Primer apellido</string>
    <string name="ht_user_surname2">Segundo apellido</string>
    <string name="ht_user_email">Correo electrónico</string>
    <string name="ht_user_id">DNI</string>
    <string name="ht_user_password">Contraseña</string>
    <string name="ht_user_repeat_password">Repita su contraseña</string>

    <string name="tv_user_name">Nombre</string>
    <string name="tv_user_surname">Primer apellido</string>
    <string name="tv_user_surname2">Segundo apellido</string>
    <string name="tv_user_email">Correo electrónico</string>N
    <string name="tv_user_id">DNI</string>
    <string name="tv_user_password">Contraseña</string>
    <string name="tv_user_repeat_password">Repita su contraseña</string>

    <string name="btn_sign_up">CREAR CUENTA</string>

    <!-- Error form strings -->
    <string name="error_empty_field">Campos obligatorios vacíos</string>
    <string name="error_wrong_login">Usuario y contraseña no corresponden</string>
    <string name="error_login">Usuario y/o contraseña incorrectos</string>

    <!-- Error for signUp activity -->
    <string name="error_values">Introduzca valores válidos</string>
    <string name="error_email">Introduzca un email valido</string>
    <string name="success_title">Registrado correctamente</string>
    <string name="success_message">Ahora podrá iniciar sesión con sus credenciales</string>
    <string name="error_user">El usuario ya existe en la base de datos</string>
    <string name="error_password">Introduzca una contraseña valida</string>
    <string name="error_password_length">La contraseña ha de tener 5 dígitos como mínimo</string>
    <string name="error_passwords">Ambas contraseñas no coinciden</string>


    <!-- Dialog information values -->
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="retry">Reintentar</string>
    <string name="loading">Cargando</string>

    <!-- Error for network connection -->
    <string name="error_connection">Se ha producido un error de conexión</string>

    <!-- Guillotine strings -->
    <string name="profile">PROFILE</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOG OUT</string>

    <!-- String for exceptions -->
    <string name="generic_title_error">Error</string>
    <string name="generic_error">Se ha producido un error</string>

    <!-- Strings for signup process -->
    <string name="personal_data">DATOS PERSONALES</string>
    <string name="user_data">DATOS DE USUARIO</string>
    <string name="finalize">FINALIZAR</string>

    <!-- Appointments list item-->
    <string name="appointment_date">Fecha: </string>
    <string name="appointment_hour">Hora: </string>
    <string name="email_not_disponible">No hay email disponible</string>
    <string name="phone_not_disponible">No hy teléfono disponible</string>

    <!-- Alert dialog -->
    <string name="dialog_warning_title">¿Está seguro de eliminar su cita?</string>
    <string name="dialog_warning_message">Su cita quedaría eliminada permanentemente</string>

    <!-- Appointment details -->
    <string name="appointment_details">Detalles de cita</string>
    <string name="btn_delete">ELIMINAR</string>
    <string name="btn_modify">MODIFICAR</string>

    <!-- Create appointment -->
    <string name="tv_service">Servicio</string>
    <string name="select_service">Seleccione un servicio</string>
    <string name="stablishment">Establecimiento</string>
    <string name="select_stablishment">Seleccione un establecimiento</string>
    <string name="tv_location">Localidad</string>
    <string name="select_location">Seleccione una localidad</string>
    <string name="tv_select_hour">Seleccione una hora</string>
    <string name="select_hour">Seleccione una hora</string>
    <string name="tv_select_date">Seleccione una fecha</string>
    <string name="select_date">Seleccione una fecha</string>
    <string name="btn_request_appointment">PEDIR CITA</string>
    <string name="select_locality">Seleccione una localidad</string>
    <string name="modify_appointment_title">¿Modificar cita?</string>
    <string name="modify_appointment_message">¿Está seguro que desea modificar su cita?</string>
    <string name="no_appointments">No hay citas disponibles</string>
    <string name="create_appointment">CREAR CITA</string>
    <string name="modify_appointment">MODIFICAR CITA</string>
    <string name="user_profile">PROFILE</string>


    <string name="appointment_list">LISTA DE CITAS</string>
    <string name="appointment_requests">SOLICITUDES DE CITAS</string>
    <string name="details">DETALLES</string>
    <string name="success_generic_title">Acción exitosa</string>
    <string name="modify_profile_data">Se han realizado los cambios correctamente</string>

    <!-- Localities from Spain -->

        <array name="localities_array">
            <item>Seleccione una localidad</item>
            <item>Madrid</item>
            <item>Barcelona</item>
            <item>Valencia</item>
        </array>

    <string name="about_title"><s>TRABAJO DE FIN DE GRADO</s> </string>
    <string name="about_us">AUTOR: Sergio Moral Bermúdez\n\nTUTOR: Alberto Díaz Álvarez </string>


</resources>
