<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_medium"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_user_email"
            android:textSize="@dimen/font_large" />

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ht_user_email"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/tv_user_password"
            android:textSize="@dimen/font_large" />

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/ht_user_password"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/tv_user_repeat_password"
            android:textSize="@dimen/font_large" />

        <EditText
            android:id="@+id/et_user_repeat_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/ht_user_repeat_password"
            android:textSize="@dimen/font_medium" />

    </LinearLayout>


    <include layout="@layout/navigation_bar" />


</LinearLayout>