<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tb_details"
        layout="@layout/toolbar_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_details">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_s_m">

            <ImageView
                android:id="@+id/iv_locality"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_location"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_location"
                app:layout_constraintTop_toTopOf="@id/tv_location" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextView"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_s_m"
                android:text="@string/tv_location"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/et_select_location"
                style="@style/EditText"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:spinnerMode="dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />

            <ImageView
                android:id="@+id/iv_service"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_service"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_service"
                app:layout_constraintTop_toTopOf="@id/tv_service" />

            <TextView
                android:id="@+id/tv_service"
                style="@style/TextView"
                android:text="@string/tv_service"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_select_location" />

            <Spinner
                android:id="@+id/et_service"
                style="@style/EditText"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:spinnerMode="dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_service" />

            <ImageView
                android:id="@+id/iv_stablishment"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_stablishment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_stablishment"
                app:layout_constraintTop_toTopOf="@id/tv_stablishment" />

            <TextView
                android:id="@+id/tv_stablishment"
                style="@style/TextView"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_s_m"
                android:text="@string/stablishment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_service" />

            <Spinner
                android:id="@+id/et_stablishment"
                style="@style/EditText"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:spinnerMode="dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_stablishment" />

            <ImageView
                android:id="@+id/iv_date"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_select_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_select_date"
                app:layout_constraintTop_toTopOf="@id/tv_select_date" />

            <TextView
                android:id="@+id/tv_select_date"
                style="@style/TextView"
                android:layout_marginTop="@dimen/spacing_s_m"
                android:text="@string/tv_select_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_stablishment" />

            <TextView
                android:id="@+id/et_select_date"
                style="@style/EditText"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:hint="@string/tv_select_date"
                android:spinnerMode="dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_date" />

            <ImageView
                android:id="@+id/iv_hour"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                app:layout_constraintBottom_toBottomOf="@id/tv_select_hour"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_select_hour"
                app:layout_constraintTop_toTopOf="@id/tv_select_hour" />

            <TextView
                android:id="@+id/tv_select_hour"
                style="@style/TextView"
                android:layout_marginTop="@dimen/spacing_s_m"
                android:text="@string/tv_select_hour"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_select_date" />

            <TextView
                android:id="@+id/et_select_hour"
                style="@style/EditText"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:hint="@string/tv_select_hour"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_hour" />

            <Button
                android:id="@+id/btn_create_appointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/app_primary_color"
                android:text="@string/btn_request_appointment"
                android:textColor="@color/cpb_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_select_hour" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>